--- a/appveyor.yml
+++ b/appveyor.yml
@@ -103,5 +103,5 @@ deploy:
     draft: false
     prerelease: true
     on:
-      branch: master                # release from master branch only
+      branch: appveyor              # release from appveyor branch only
       appveyor_repo_tag: false      # deploy on tag push only
